# portfolio-asset-manager

./: .gitignore  README.md  main.py  pyproject.toml
src/asset_manager/: initial_data.py  main.py
src/asset_manager/api/: deps.py  router.py
src/asset_manager/api/v1/endpoints/: assets.py  auth.py  users.py
src/asset_manager/core/: config.py  security.py
src/asset_manager/db/: models.py  session.py
src/asset_manager/schemas/: asset.py  token.py  user.py
